cc_library(
    name = "c-libedit",
    srcs = glob([
        "*.c",
        "*.h",
        "editline/readline.h",
    ]),
    hdrs = glob([
        "*.h",
        "*.c",
        "editline/readline.h",
    ]),
    include_prefix = "",
    visibility = ["//visibility:public"],
    deps = ["//unix/src/c-libedit/linux-build"],
)
